# irc-simmulator

./: CMakeLists.txt  config.json  main.cpp
config/: AppConfig.cpp  AppConfig.h  Command.cpp  Command.h  ConfigParser.cpp  ConfigParser.h
connection/: ClientConnectionManager.cpp  ClientConnectionManager.h  ConnectionProvider.cpp  ConnectionProvider.h  ConnectionType.h  IConnectionManager.cpp  IConnectionManager.h  NoReaderException.h  NoReadersException.cpp  NoReadersException.h  ServerConnectionManager.cpp  ServerConnectionManager.h
logger/: Logger.cpp  Logger.h
mock/: ConnectionManagerMock.cpp  ConnectionManagerMock.h
regex/: CommandDispatcher.cpp  CommandDispatcher.h  CommandNotFoundException.h  RegexResolver.cpp  RegexResolver.h
tranmission/: CommunicationService.cpp  CommunicationService.h  ICommunicationService.cpp  ICommunicationService.h  ITransmissionInitializer.cpp  ITransmissionInitializer.h  TransmissionInitializer.cpp  TransmissionInitializer.h  TransmissionService.cpp  TransmissionService.h  TransmissionStatus.cpp  TransmissionStatus.h
tranmission/communication-service/: CommunicationServiceAsync.cpp  CommunicationServiceAsync.h  CommunicationServiceFactory.cpp  CommunicationServiceFactory.h  CommunicationServiceStandard.cpp  CommunicationServiceStandard.h
tranmission/threads/: AsyncRewriter.cpp  AsyncRewriter.h  CycleWriter.cpp  CycleWriter.h  IThreadItem.h  Listener.cpp  Listener.h  ThreadItem.h
tranmission/transmission-initializers/: AsyncTransmissionInitializer.cpp  AsyncTransmissionInitializer.h  TransmissionInitializer.cpp  TransmissionInitializer.h
